--- a/www/galway/Makefile
+++ b/www/galway/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2007/05/21 10:02:31 joerg Exp $
+# $NetBSD: Makefile,v 1.18 2007/06/01 01:12:30 wiz Exp $
 #
 
 DISTNAME=	galway-0.33
-PKGREVISION=	9
+PKGREVISION=	10
 CATEGORIES=	www x11 gnome
 MASTER_SITES=	${MASTER_SITE_LOCAL}
 EXTRACT_SUFX=	.tgz
@@ -10,15 +10,17 @@ EXTRACT_SUFX=	.tgz
 MAINTAINER=	rh@NetBSD.org
 COMMENT=	Web editor programmed in Scheme
 
-DEPENDS+=	guile-gtk>=0.19:../../devel/guile14-gtk
-
 NO_BUILD=	yes
 
 do-configure:
 	cd ${WRKSRC}; for i in *.scm; do				\
 		${SED}	-e "s|/usr/local|${PREFIX}|g"			\
-			-e "s|^\(exec\) guile |\1 ${PREFIX}/${GUILE14_SUBDIR}/bin/guile |g"	\
-			-e "s|guile-config|${PREFIX}/${GUILE14_SUBDIR}/bin/guile |g"		\
+			-e "s|^\(exec\) guile |\1 ${PREFIX}/${GUILE_SUBDIR}/bin/guile |g"	\
+			-e "s|^\(exec\) guile-gtk |\1 ${PREFIX}/${GUILE_SUBDIR}/bin/guile |g"	\
+			-e "s|guile-config|${PREFIX}/${GUILE_SUBDIR}/bin/guile |g"		\
+			-e "s|(gtk |(gtk-1.2 |g"			\
+			-e "s|(eval |(primitive-eval |g"		\
+			-e "s|(gtk-pixmap-new|&-from-file|g"		\
 			< $$i > $$i.cfg;				\
 		${MV} $$i.cfg $$i;					\
 		${CHMOD} +x $$i;					\
@@ -27,5 +29,6 @@ do-configure:
 do-install:
 	cd ${WRKSRC} && ./install.scm
 
-.include "../../lang/guile14/buildlink3.mk"
+.include "../../devel/guile-gtk/buildlink3.mk"
+.include "../../lang/guile/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
