--- a/security/amavisd-new/Makefile
+++ b/security/amavisd-new/Makefile
@@ -1,14 +1,14 @@
-# $NetBSD: Makefile,v 1.30 2007/05/10 12:58:27 xtraeme Exp $
+# $NetBSD: Makefile,v 1.31 2007/06/01 04:41:07 xtraeme Exp $
 
 DISTNAME=	amavisd-new-${VERSION}${PATCHLEVEL}
 PKGNAME=	amavisd-new-${VERSION}${PATCHLEVEL:S/-//}
-PKGREVISION=	1
+#PKGREVISION=	1
 CATEGORIES=	security mail
 MASTER_SITES=	http://www.ijs.si/software/amavisd/ \
 		http://mirrors.catpipe.net/amavisd-new/ \
 		http://mirror.mainloop.se/amavisd/
 
-VERSION=	2.5.0
+VERSION=	2.5.1
 PATCHLEVEL=	# empty
 
 MAINTAINER=	jdunn@aquezada.com
