--- a/textproc/Makefile
+++ b/textproc/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.367 2007/05/29 10:16:52 joerg Exp $
+# $NetBSD: Makefile,v 1.368 2007/06/01 19:33:01 kristerw Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -309,8 +309,8 @@ SUBDIR+=	rubber
 SUBDIR+=	ruby-amrita
 SUBDIR+=	ruby-eruby
 SUBDIR+=	ruby-hpricot
-SUBDIR+=	ruby-htree
 SUBDIR+=	ruby-html-parser
+SUBDIR+=	ruby-htree
 SUBDIR+=	ruby-mecab
 SUBDIR+=	ruby-native-hyperestraier
 SUBDIR+=	ruby-nqxml
