--- a/devel/liboil/Makefile
+++ b/devel/liboil/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2007/04/10 16:09:42 drochner Exp $
+# $NetBSD: Makefile,v 1.12 2007/06/01 20:21:03 wiz Exp $
 #
 
-DISTNAME=	liboil-0.3.11
+DISTNAME=	liboil-0.3.12
 CATEGORIES=	devel
 MASTER_SITES=	http://liboil.freedesktop.org/download/
 
