--- a/x11/Makefile
+++ b/x11/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.506 2007/05/30 14:03:16 obache Exp $
+# $NetBSD: Makefile,v 1.507 2007/06/02 08:29:06 agc Exp $
 #
 
 COMMENT=	Packages to support the X window system
@@ -228,6 +228,7 @@ SUBDIR+=	mrxvt
 SUBDIR+=	multi-aterm
 SUBDIR+=	mxterm
 SUBDIR+=	neXtaw
+SUBDIR+=	nucleo
 SUBDIR+=	numlockx
 SUBDIR+=	ocaml-graphics
 SUBDIR+=	oneko
