--- a/wm/Makefile
+++ b/wm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.94 2007/05/20 15:21:35 wiz Exp $
+# $NetBSD: Makefile,v 1.95 2007/06/02 19:09:03 agc Exp $
 #
 
 COMMENT=	X11 window managers, configuration tools, and themes
@@ -47,6 +47,7 @@ SUBDIR+=	larswm
 SUBDIR+=	lwm
 SUBDIR+=	matchbox-wm
 SUBDIR+=	metacity
+SUBDIR+=	metisse
 SUBDIR+=	mlvwm
 SUBDIR+=	novawm
 SUBDIR+=	obconf
