--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.457 2007/05/26 13:54:30 obache Exp $
+# $NetBSD: Makefile,v 1.458 2007/06/03 07:51:38 dsainty Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -96,6 +96,7 @@ SUBDIR+=	gimageview
 SUBDIR+=	gimp
 SUBDIR+=	gimp-color-manager
 SUBDIR+=	gimp-docs
+SUBDIR+=	gimp-fix-ca
 SUBDIR+=	gimp-rawphoto
 SUBDIR+=	gimp-refocus-it
 SUBDIR+=	gimp-ufraw
