--- a/graphics/gimp-fix-ca/Makefile
+++ b/graphics/gimp-fix-ca/Makefile
@@ -1,16 +1,16 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/06/03 07:48:13 dsainty Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/03 09:28:34 dsainty Exp $
 #
 
 DISTNAME=		gimp-fix-ca-2.1.0
 CATEGORIES=		graphics
 MASTER_SITES=		http://registry.gimp.org/file/fix-ca.c?action=download&id=8944&file=
 EXTRACT_SUFX=		.c
-FETCH_BEFORE_ARGS+=     -o ${DISTNAME}${EXTRACT_SUFX}
 
-MAINTAINER=		pkgsrc-users@NetBSD.org
+MAINTAINER=		dsainty@NetBSD.org
 HOMEPAGE=		http://kcd.sourceforge.net/fix-ca.php
 COMMENT=		GIMP plugin to correct chromatic aberration (CA)
 
+FETCH_BEFORE_ARGS+=	-o ${DISTNAME}${EXTRACT_SUFX}
 WRKSRC=			${WRKDIR}
 NO_CONFIGURE=		yes
 INSTALLATION_DIRS=	lib/gimp/2.0/plug-ins
@@ -18,11 +18,11 @@ INSTALLATION_DIRS=	lib/gimp/2.0/plug-ins
 USE_TOOLS+=		pkg-config
 
 pre-build:
-	${LN} -sf ${LOCALBASE}/bin/gimptool-2.0 \
+	ln -sf ${LOCALBASE}/bin/gimptool-2.0 \
 		${BUILDLINK_DIR}/bin/gimptool
 
 do-build:
-	cd "${WRKDIR}"; gimptool --build ${DISTNAME}${EXTRACT_SUFX}
+	cd "${WRKDIR}" && gimptool --build ${DISTNAME}${EXTRACT_SUFX}
 
 do-install:
 	${INSTALL_PROGRAM} ${WRKSRC}/${DISTNAME} \
