--- a/sysutils/htop/Makefile
+++ b/sysutils/htop/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.1.1.1 2007/05/25 19:30:21 agc Exp $
+# $NetBSD: Makefile,v 1.2 2007/06/03 12:53:59 xtraeme Exp $
 #
 
-DISTNAME=	htop-0.6.5
+DISTNAME=	htop-0.6.6
 CATEGORIES=	sysutils
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=htop/}
 
