--- a/devel/flex/Makefile
+++ b/devel/flex/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.23 2007/03/07 16:50:13 rillig Exp $
+# $NetBSD: Makefile,v 1.24 2007/06/03 22:57:25 heinz Exp $
 
 DISTNAME=		flex-2.5.33
 PKGREVISION=		2
@@ -8,6 +8,8 @@ MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=flex/}
 MAINTAINER=		pkgsrc-users@NetBSD.org
 HOMEPAGE=		http://www.gnu.org/software/flex/
 COMMENT=		Fast clone of lex(1), the lexical scanner generator
+
+PKG_DESTDIR_SUPPORT=	user-destdir
 
 GNU_CONFIGURE=		YES
 USE_TOOLS+=		bison gm4:run makeinfo
@@ -26,7 +28,7 @@ USE_TOOLS+=		gmake	# bmake has problems with the test suite
 .endif
 
 post-install:
-	cd ${PREFIX}/bin && ln -s flex flex++
+	cd ${DESTDIR:Q}${PREFIX:Q}/bin && ln -s flex flex++
 
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
