--- a/graphics/Makefile
+++ b/graphics/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.458 2007/06/03 07:51:38 dsainty Exp $
+# $NetBSD: Makefile,v 1.459 2007/06/04 04:15:55 obache Exp $
 #
 
 COMMENT=	Graphics tools and libraries
@@ -270,6 +270,7 @@ SUBDIR+=	py-piddle
 SUBDIR+=	qcamview
 SUBDIR+=	qiv
 SUBDIR+=	qvplay
+SUBDIR+=	rabbit
 SUBDIR+=	radiance
 SUBDIR+=	rayshade
 SUBDIR+=	refocus-it
