--- a/x11/gdm/Makefile
+++ b/x11/gdm/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.124 2007/04/11 20:40:07 drochner Exp $
+# $NetBSD: Makefile,v 1.125 2007/06/04 14:43:57 jmmv Exp $
 #
 
 DISTNAME=	gdm-2.18.1
+PKGREVISION=	1
 CATEGORIES=	x11 gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gdm/2.18/}
 EXTRACT_SUFX=	.tar.bz2
@@ -92,7 +93,21 @@ CONFIGURE_ARGS+=	--enable-ipv6
 CONFIGURE_ARGS+=	--disable-ipv6
 .endif
 
-.if ${OPSYS} == "NetBSD"
+# The following forces the X server to start on the 5th virtual terminal.
+# This is suboptimal but matches the defaults for the xdm configuration,
+# which should work for most installations.  See the definition of
+# DEFAULTVT in xsrc/xfree/xc/programs/xdm/config/Imakefile.
+#
+# If we do not do this, we hit a very annoying and obscure problem: during
+# system startup, gdm starts before init spawns gettys.  If the X server
+# is started before init spawns the gettys (which easily happens on slow
+# machines), it grabs the first virtual terminal (instead of the first
+# "free" one).  Later on, when the first getty is started, it grabs the
+# same terminal X used (the first one).  As a result, only one of them
+# will receive key presses.  And on slow machines, X will have lost access
+# to the keyboard.
+.if (${OPSYS} == "NetBSD" || ${OPSYS} == "OpenBSD") && \
+    (${MACHINE_ARCH} == "i386" || ${MACHINE_ARCH} == "x86_64")
 CONFIGURE_ARGS+=	X_SERVER_ARGS="vt05"
 .endif
 
