--- a/x11/xpmroot/Makefile
+++ b/x11/xpmroot/Makefile
@@ -1,12 +1,11 @@
-# $NetBSD: Makefile,v 1.54 2007/02/22 19:01:28 wiz Exp $
+# $NetBSD: Makefile,v 1.55 2007/06/04 22:20:24 wiz Exp $
 #
 
 DISTNAME=	fvwm-${PKG_VERSION}
 PKGNAME=	xpmroot-${PKG_VERSION}
 #PKGREVISION=	1
 CATEGORIES=	x11
-MASTER_SITES=	ftp://ftp.fvwm.org/pub/fvwm/version-2/ \
-		ftp://ftp.hpc.uh.edu/pub/fvwm/version-2/
+MASTER_SITES=	ftp://ftp.fvwm.org/pub/fvwm/version-2/
 
 MAINTAINER=	martti@NetBSD.org
 HOMEPAGE=	http://www.fvwm.org/documentation/manpages/stable/xpmroot.php
