--- a/x11/xpostit/Makefile
+++ b/x11/xpostit/Makefile
@@ -1,12 +1,11 @@
-# $NetBSD: Makefile,v 1.9 2006/12/27 13:37:46 joerg Exp $
+# $NetBSD: Makefile,v 1.10 2007/06/04 22:19:52 wiz Exp $
 #
 
 DISTNAME=	xpostit3.3.1
 PKGNAME=	xpostit-3.3.1
 PKGREVISION=	2
 CATEGORIES=	x11
-MASTER_SITES=	ftp://ftp.x.org/R5contrib/ \
-		ftp://ftp.freesoftware.com/pub/X11/R5contrib/
+MASTER_SITES=	ftp://ftp.x.org/R5contrib/
 EXTRACT_SUFX=	.tar.Z
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
