--- a/misc/openoffice2/Makefile
+++ b/misc/openoffice2/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2007/05/12 14:05:54 ghen Exp $
+# $NetBSD: Makefile,v 1.18 2007/06/05 05:42:58 wiz Exp $
 #
 
 OO_VER=			2.2.0
-PKGREVISION=		2
+PKGREVISION=		3
 DISTNAME=		openoffice-${OO_VER}
 PKGNAME=		openoffice2-${OO_VER}
 CATEGORIES=		misc
