--- a/lang/Makefile
+++ b/lang/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.242 2007/06/04 23:40:09 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.243 2007/06/05 05:50:16 wiz Exp $
 #
 
 COMMENT=	Programming languages
@@ -55,7 +55,6 @@ SUBDIR+=	ghc
 SUBDIR+=	gpc
 SUBDIR+=	gprolog
 SUBDIR+=	guile
-SUBDIR+=	guile14
 SUBDIR+=	guile16
 SUBDIR+=	gwydion-dylan
 SUBDIR+=	hugs
